syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

service SupportChatService {
    rpc SendTextMessage (TextMessageRequest) returns (Empty);
    rpc SendFileMessage (FileMessageRequest) returns (Empty);
    rpc ReceiveMessage (ReceiveRequest) returns (stream MessageResponse);
    rpc History (HistoryRequest) returns (HistoryResponse);
}

message TextMessageRequest {
    string content = 1;
    string roomId = 2;
    string uniqueKey = 3;
}

message FileMessageRequest {
    bytes content = 1;
    string roomId = 2;
    string contentType = 3;
    string uniqueKey = 4;
}

message ReceiveRequest {
    string roomId = 1;
}

message MessageResponse {
    string roomId = 1;
    MessageType messageType = 2;
    google.protobuf.Any content = 3;
    string senderName = 4;
    google.protobuf.Timestamp sendingDate = 5;
    bool belongsToSender = 6;
}

message HistoryResponse {
    repeated MessageResponse messages = 1;
}

enum MessageType {
    text = 0;
    file = 1;
}

message HistoryRequest {
    string roomId = 1;
}

message Empty {}